--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -16,112 +16,29 @@
                         <h6 class="headline">Chat</h6>
                     </div>
                 </li>
-                <li class="list-group-item scroll-outer">
+                <li class="list-group-item scroll-outer" id="chatbox">
                     <div class="row scroll">
-                        <div class="col-md-8">
+                        <div class="col-md-8" th:each="message : ${messages}">
                             <div class="card">
                                 <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
+                                    <small class="username" th:text="@{'@'+${message.transmitterUsername}}">@username</small>
+                                    <small class="time" th:text="${#dates.format(new java.util.Date(message.sendTime), 'dd.MM.yy - HH:mm')}">13:48</small>
                                 </div>
                                 <div class="card-body">
-                                    <p>This is a message from Sender X...</p>
+                                    <p th:text="@{${message.msgContent}}"></p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>Hi X this is another message ...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-8">
-                            <div class="card">
-                                <div class="my-card-header">
-                                    <small class="username">@username</small>
-                                    <small class="time">13:48</small>
-                                </div>
-                                <div class="card-body">
-                                    <p>...</p>
-                                </div>
-                            </div>
-                        </div>
+                    </div>
                 </li>
-                <form>
+                <form action="/message/registerMessage" method="post">
                     <li class="list-group-item d-flex justify-content-between lh-condensed userlist" id="sendForm">
                         <div class="col-md-10">
-                            <input type="text" class="form-control" placeholder="type something...">
+                            <input id="msgContent" name="msgContent" type="text" class="form-control" placeholder="type something..." th:field="*{newMessage.msgContent}">
+                            <input name="transmitterUsername" type="hidden" class="form-control" placeholder="type something..." th:field="*{newMessage.transmitterUsername}" />
+                            <input name="receiverUsername" type="hidden" class="form-control" placeholder="type something..." th:field="*{newMessage.receiverUsername}" />
+                            <input name="sender" type="hidden" class="form-control" placeholder="type something..." th:value="*{sender}" />
+                            <input name="receiver" type="hidden" class="form-control" placeholder="type something..." th:value="*{receiver}" />
                         </div>
                         <button type="submit" class="btn btn-primary px-4 ">send</button>
                     </li>
@@ -143,48 +60,6 @@
                                 <small th:text="@{${user.firstName}+' '+${user.lastName}}"></small>
                             </div>
                         </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">@Nickname, (...)f</h6>
-                                <small>Firstname Lastname</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">@Nickname, (...)d</h6>
-                                <small>Firstname Lastname</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">...</h6>
-                                <small>...</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">...</h6>
-                                <small>...</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">...</h6>
-                                <small>...</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">...</h6>
-                                <small>...</small>
-                            </div>
-                        </li>
-                        <li class="list-group-item d-flex justify-content-between lh-condensed">
-                            <div>
-                                <h6 class="">...</h6>
-                                <small>...</small>
-                            </div>
-                        </li>
                     </ul>
                 </li>
                 <li class="list-group-item d-flex justify-content-between lh-condensed userlist">
@@ -195,6 +70,16 @@
         </div>
     </div>
 </div>
+<script>
+    var objDiv = document.getElementById("chatbox");
+    objDiv.scrollTop = objDiv.scrollHeight;
+
+    setTimeout(function(){
+        if (document.activeElement.id != 'msgContent') {
+            window.location.reload(1);
+        }
+    }, 5000);
+</script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
